# rust-template

./: .gitignore  Cargo.toml  README.md  prepare.sh
src/: main.rs
